# bazel-release

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  deps.bzl  extensions.bzl  repos.bzl
.github/workflows/: create_release.yml
release/: release.bzl  release.template.bash
