# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name="lowrisc_bazel_release")

load("//:repos.bzl", "lowrisc_bazel_release_repos")
lowrisc_bazel_release_repos()
load("//:deps.bzl", "lowrisc_bazel_release_deps")
lowrisc_bazel_release_deps()
